--- a/client/mern-azure/package.json
+++ b/client/mern-azure/package.json
@@ -10,13 +10,15 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "serve -s build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5001/"
+  "proxy": "http://localhost:5001/"
 }
