--- a/client/mern-azure/package.json
+++ b/client/mern-azure/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "serve -s build",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "react-scripts build"
