--- a/client/mern-azure/package.json
+++ b/client/mern-azure/package.json
@@ -10,15 +10,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-    "serve": "^11.3.2"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "react-scripts build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5001/"
+  "proxy":"http://localhost:5001/"
 }
